plugins/proxywasm/e2e/istio/kubernetes/manifests/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
      - name: nginx
        image: nginx:1.29.3
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
    service: nginx
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: nginx
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
    - "*"
  gateways:
    - gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/multiple/nginx"
        - uri:
            prefix: "/healthy/nginx"
      route:
        - destination:
            port:
              number: 80
            host: nginx
