plugins/proxywasm/e2e/istio/kubernetes/manifests/sablier.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sablier-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sablier
  namespace: sablier-system
  labels:
    app: sablier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sablier
  template:
    metadata:
      labels:
        app: sablier
    spec:
      serviceAccountName: sablier
      containers:
      - name: sablier
        image: sablierapp/sablier:local
        args: ["start", "--provider.name=kubernetes", "--logging.level=trace"]
        ports:
        - containerPort: 10000
---
apiVersion: v1
kind: Service
metadata:
  name: sablier
  namespace: sablier-system
spec:
  selector:
    app: sablier
  ports:
    - protocol: TCP
      port: 10000
      targetPort: 10000
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sablier
  namespace: sablier-system
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: sablier
  namespace: sablier-system
rules:
  - apiGroups:
      - apps
      - ""
    resources:
      - deployments
      - deployments/scale
      - statefulsets
      - statefulsets/scale
    verbs:
      - patch   # Scale up and down
      - get     # Retrieve info about specific dep
      - update  # Scale up and down
      - list    # Events
      - watch   # Events
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: sablier
  namespace: sablier-system
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: sablier
subjects:
  - kind: ServiceAccount
    name: sablier
    namespace: sablier-system
