plugins/proxywasm/e2e/istio/kubernetes/manifests/whoami.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
      version: v1
  template:
    metadata:
      labels:
        app: whoami
        version: v1
    spec:
      containers:
      - name: whoami
        image: containous/whoami:v1.5.0
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
    service: whoami
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whoami
spec:
  hosts:
    - "*"
  gateways:
    - gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/dynamic/whoami"
        - uri:
            prefix: "/blocking/whoami"
        - uri:
            prefix: "/multiple/whoami"
      route:
        - destination:
            port:
              number: 80
            host: whoami
